<resources>
    <string name="app_name">Restaurante el buen gusto</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="menu_home">HOME</string>
    <string name="menu_pedidos">Mis pedidos</string>
    <string name="menu_sucursales">Sucursales</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_click">Restaurante el buen gusto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_cena">Cenas</string>
    <string name="menu_postres">Postres</string>
    <string name="menu_almu">Almuerzos</string>
    <string name="menu_desa">Desayunos</string>
    <string name="crearpedido">Crear pedido</string>
    <string name="verpedido">Ver pedido</string>
    <string name="addmenu">Agregar</string>

</resources>